base/smarthome/mosquitto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: smarthome
spec:
  type: ClusterIP
  ports:
  - port: 1883
    name: mqtt
  - port: 8883
    name: mqtt-tls
  selector:
    app: mosquitto
